# transitiv-nagios-plugins

./: .gitignore  COPYING  Makefile.am  PluginTester.pm  README  README.md  configure.ac
configs/: Makefile.am  check_active_calls.cfg.in  check_cisco_temperatures.cfg.in  check_netscreen_load.cfg.in  check_netscreen_memory.cfg.in  check_netscreen_sessions.cfg.in  check_snmp_mem_simple.cfg.in  check_snmp_printer.cfg.in  check_snmp_processor_load.cfg.in  check_snmp_storage.cfg.in
nagios-config/: Makefile.am  check_apcupsd_ups.cfg.in  check_cisco_css_content_rule.cfg.in  check_cisco_fans.cfg.in  check_cisco_load.cfg.in  check_cisco_memory.cfg.in  check_cisco_pix_failover.cfg.in  check_cisco_psu.cfg.in  check_cisco_temperatures.cfg.in  check_linux_memory.cfg.in  check_snmp_interface.cfg.in  check_snmp_lm_sensors_cpu_temp.cfg.in  check_snmp_lm_sensors_temp.cfg.in  check_snmp_mem_simple.cfg.in  check_snmp_uptime.cfg.in  check_wordpress.cfg.in
plugins/: Makefile.am  check_active_calls.pl.in  check_apcupsd_ups.pl.in  check_cisco_css_content_rule.pl.in  check_cisco_fans.pl.in  check_cisco_load.pl.in  check_cisco_memory.pl.in  check_cisco_pix_failover.pl.in  check_cisco_psu.pl.in  check_cisco_temperatures.pl.in  check_linux_memory.pl.in  check_netscreen_load.pl.in  check_netscreen_memory.pl.in  check_netscreen_sessions.pl.in  check_snmp_interface.pl.in  check_snmp_lm_sensors_temp.pl.in  check_snmp_mem_simple.pl.in  check_snmp_printer.pl.in  check_snmp_processor_load.pl.in  check_snmp_storage.pl.in  check_snmp_uptime.pl.in  check_wordpress.pl.in
plugins/t/: check_apcupsd_ups.t  check_cisco_css_content_rule.t  check_cisco_fans.t  check_cisco_load.t  check_cisco_memory.t  check_cisco_pix_failover.t  check_cisco_psu.t  check_cisco_temperatures.t  check_linux_memory.t  check_netscreen_load.t  check_netscreen_memory.t  check_netscreen_sessions.t  check_snmp_interface.t  check_snmp_lm_sensors_temp.t  check_snmp_mem_simple.t  check_snmp_printer.t  check_snmp_processor_load.t  check_snmp_storage.t  check_snmp_uptime.t  check_wordpress.t
pnptemplates/: Makefile.am  check_active_calls.php.in  check_apcupsd_ups.php.in  check_cisco_memory.php.in  check_linux_memory.php.in  check_snmp_interface.php.in  check_snmp_mem_simple.php.in
templates/: Makefile.am  check_apcupsd_ups.php.in  check_cisco_css_content_rule.php.in  check_cisco_load.php.in  check_snmp_mem_simple.php.in  check_snmp_processor_load.php.in  check_snmp_storage.php.in
